<resources>
    <string name="app_name">Okay Bank</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_otp_preview">OtpPreviewActivity</string>
    <string name="title_activity_new_recipient">NewRecipient</string>

    <string name="account_recipient_label">Account of the Recipient</string>
    <string name="submit_recipient">Submit Recipient</string>
    <string name="new_recipient">New Recipient</string>
    <string name="enter">Enter</string>
    <string name="name">Name</string>
    <string name="title_activity_transaction_preview">TransactionPreview</string>
    <string name="description_string">A synchronous request between your server and Okaythis server that checks the authorization status of a session – Your server should perform this call to check session statuses.</string>
    <string name="biometric">BIOMETRIC</string>
    <string name="pin_code">PIN Code</string>
    <string name="one_click">One Click</string>
    <string name="authenticate_with">Authenticate with</string>
    <string name="item_name">Item Name</string>
    <string name="issuer">Issuer</string>
    <string name="shipping">shipping</string>
    <string name="tax">tax</string>
    <string name="total">Total</string>
    <string name="title_activity_use_case">UseCaseActivity</string>
    <string name="currency_placeholder">$</string>
    <string name="product_amount_placeholder">123</string>
    <string name="product_name_placeholder">Pretty Chair</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="purchase_button">Buy</string>
    <string name="image_description">Product Image</string>
    <string name="title_activity_billing_card_details">BillingCardDetailsActivity</string>
    <string name="enter_card_details_string">Enter your credit card details</string>
    <string name="product">Product</string>
    <string name="purchase">Purchase</string>
    <string name="card_issuer">VISA</string>
    <string name="card_number">5555 5555 5555 5555</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_expiration_date">Expires</string>
    <string name="john_doe">JOHN DOE</string>
    <string name="temp_expiration_date">12/20</string>
    <string name="validate">Validate</string>
    <string name="title_activity_purchase_complete">PurchaseCompleteActivity</string>
    <string name="purchase_complete">Purchase Complete</string>
    <string name="acknowledgement_message">Thank you for your order, your package will be packed and shipped within 24 hours.</string>
    <string name="product_image_description">Image Description</string>
    <string name="zero_amount">0</string>
    <string name="back">Back</string>
    <string name="date_placeholder">1.1.2060</string>
    <string name="company_holder">Pretty Things AS</string>
    <string name="title_activity_home">home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
