<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/c_layout_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".usecases.prettythings.ui.billingcarddetails.BillingCardDetailsActivity"
    tools:showIn="@layout/activity_billing_card_details">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/c_layout_padding_top"
        android:text="@string/enter_card_details_string"
        android:textColor="@color/c_orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/purchaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/purchase"
        android:textColor="@color/c_black"
        android:textSize="66sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/c_sixty_dp"
        android:layout_marginRight="@dimen/default_margin"
        app:cardCornerRadius="@dimen/c_card_corner_radius"
        app:layout_constraintEnd_toEndOf="@+id/purchaseTextView"
        app:layout_constraintStart_toStartOf="@+id/purchaseTextView"
        app:layout_constraintTop_toBottomOf="@+id/purchaseTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/c_layout_padding">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_issuer"
                android:textSize="@dimen/f_card_issuer_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/c_layout_margin_between_components_2x"
                android:fontFamily="monospace"
                android:text="@string/card_number"
                android:textAlignment="center"
                android:textSize="@dimen/p_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/cardHolderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/c_layout_margin_between_components_2x"
                android:text="@string/card_holder"
                android:textSize="@dimen/f_text_caption"
                app:layout_constraintStart_toStartOf="@+id/card_number"
                app:layout_constraintTop_toBottomOf="@+id/card_number" />

            <TextView
                android:id="@+id/expirationDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/card_expiration_date"
                android:textSize="@dimen/f_text_caption"
                app:layout_constraintBottom_toBottomOf="@+id/cardHolderLabel"
                app:layout_constraintEnd_toEndOf="@+id/card_number" />

            <TextView
                android:id="@+id/cardHolderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_doe"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/cardHolderLabel"
                app:layout_constraintTop_toBottomOf="@+id/cardHolderLabel" />

            <TextView
                android:id="@+id/expirationDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_expiration_date"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/expirationDateLabel"
                app:layout_constraintTop_toBottomOf="@+id/expirationDateLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/purchaseButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:backgroundTint="@color/c_orange"
        android:elevation="@dimen/c_button_elevation"
        android:includeFontPadding="false"
        android:text="@string/validate"
        android:textStyle="bold"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>