<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/c_layout_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".usecases.prettythings.ui.purchasecomplete.PurchaseCompleteActivity"
    tools:showIn="@layout/activity_purchase_complete">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/c_layout_padding_top"
        android:text="@string/purchase_complete"
        android:textColor="@color/c_orange"
        android:textSize="@dimen/f_title_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/c_layout_margin_between_components"
        android:text="@string/acknowledgement_message"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/c_layout_margin_between_components_2x"
        android:background="@color/c_light_gray"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="176dp"
        android:layout_marginTop="@dimen/c_layout_margin_between_components_2x"
        android:padding="@dimen/c_layout_padding"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/c_thirty_dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="monospace"
            android:text="@string/product_name_placeholder"
            android:textSize="@dimen/f_card_issuer_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/product_image_card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.495" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_amount_placeholder"
            android:textColor="@color/c_black"
            android:textSize="@dimen/p_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/productName"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/amount_currency_margin"
            android:text="@string/currency_placeholder"
            android:textColor="@color/c_black"
            android:textSize="@dimen/p_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <androidx.cardview.widget.CardView
            android:id="@+id/product_image_card"
            android:layout_width="100dp"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/c_card_corner_radius"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_image_description"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/im_chair" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/c_layout_margin_between_components_2x"
        android:background="@color/c_light_gray"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/c_layout_margin_between_components_2x"
        android:text="@string/shipping"
        android:textSize="@dimen/caption_large"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/amount_currency_margin"
        android:text="@string/zero_amount"
        android:textSize="@dimen/caption_large"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/c_layout_margin_between_components_2x"
        android:text="@string/currency_placeholder"
        android:textSize="@dimen/caption_large"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/c_layout_margin_between_components_half"
        android:text="@string/currency_placeholder"
        android:textSize="@dimen/caption_large"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/amount_currency_margin"
        android:text="@string/zero_amount"
        android:textSize="@dimen/caption_large"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="@dimen/caption_large"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/c_layout_margin_between_components"
        android:text="@string/currency_placeholder"
        android:textColor="@color/c_black"
        android:textSize="@dimen/caption_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/c_layout_margin_between_components_half"
        android:text="@string/product_amount_placeholder"
        android:textColor="@color/c_black"
        android:textSize="@dimen/p_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toStartOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/c_layout_margin_between_components_2x"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/back"
        app:cornerRadius="@dimen/c_button_corner_radius_smooth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>