<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/c_card_height"
    android:layout_marginStart="@dimen/c_layout_margin_between_components_half"
    android:layout_marginEnd="@dimen/c_layout_margin_between_components_half"
    android:layout_marginBottom="@dimen/c_layout_margin_between_components"
    android:padding="@dimen/c_layout_margin_between_components"
    app:cardBackgroundColor="@color/colorTranslucent"
    app:cardCornerRadius="@dimen/c_button_corner_radius_2x"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/im_chair"
        android:padding="16dp">


        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:text="@string/product_name_placeholder"
            android:textColor="@color/c_white"
            android:textSize="@dimen/f_text_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_amount_placeholder"
            android:textColor="@color/c_white"
            android:textSize="@dimen/p_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/currencyTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_placeholder"
            android:textColor="@color/c_white"
            android:textSize="@dimen/p_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/productPriceTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toEndOf="@+id/productPriceTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
